--- a/project_01_movies_trailers/code/package.json
+++ b/project_01_movies_trailers/code/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "My first Udacity project",
   "devDependencies": {
+    "eslint": "^0.24.1",
     "gulp": "^3.9.0",
     "gulp-jasmine": "^2.0.1",
     "jasmine": "^2.3.1",
@@ -15,7 +16,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=0.10.32"
+    "node": ">=0.12.4"
   },
   "repository": {
     "type": "git",
