--- a/project_01_movies_trailers/code/.eslintrc
+++ b/project_01_movies_trailers/code/.eslintrc
@@ -1,7 +1,11 @@
 {
+  "ecmaFeatures": {
+    "modules": true
+  },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "plugins": [
   ],
