--- a/project_01_movies_trailers/code/package.json
+++ b/project_01_movies_trailers/code/package.json
@@ -3,16 +3,21 @@
   "version": "0.0.1",
   "description": "My first Udacity project",
   "devDependencies": {
+    "babel-core": "^5.8.19",
+    "babel-loader": "^5.3.2",
+    "bootstrap": "^3.3.5",
     "eslint": "^0.24.1",
     "gulp": "^3.9.0",
     "gulp-jasmine": "^2.0.1",
     "jasmine": "^2.3.1",
     "jasmine-reporters": "^2.0.7",
+    "jquery": "^1.11.3",
     "karma": "^0.13.2",
     "karma-coverage": "^0.4.2",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs2-launcher": "^0.1.6",
-    "karma-spec-reporter": "0.0.20"
+    "karma-spec-reporter": "0.0.20",
+    "webpack": "^1.10.5"
   },
   "license": "MIT",
   "engines": {
