chore: Got rid of gulp unit
- Also defined gulp webpack

--- a/project_01_movies_trailers/code/package.json
+++ b/project_01_movies_trailers/code/package.json
@@ -21,6 +21,6 @@
     "url": "https://github.com/skawaguchi/udacity-course-work.git"
   },
   "scripts": {
-    "test": "gulp unit"
+    "start": "gulp webpack"
   }
 }
